<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.characterdetails.CharacterDetailsFragment">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/star_wars_font"
        android:letterSpacing="0.1"
        android:padding="16dp"
        android:text="@string/details"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintBottom_toBottomOf="@id/text_view"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@id/text_view"
        app:srcCompat="@drawable/ic_back_arrow"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/name_tag"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/star_wars_font"
        android:letterSpacing="0.1"
        android:text="@string/name_tag"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/text_view" />

    <TextView
        android:id="@+id/character_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/star_wars_font"
        android:letterSpacing="0.1"
        android:textColor="@color/yellow"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/name_tag"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_middle"
        app:layout_constraintTop_toTopOf="@id/name_tag"
        tools:text="Luke Skywalker" />

    <TextView
        android:id="@+id/gender_tag"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/star_wars_font"
        android:letterSpacing="0.1"
        android:text="@string/gender_tag"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/name_tag" />

    <TextView
        android:id="@+id/character_gender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/star_wars_font"
        android:letterSpacing="0.1"
        android:textColor="@color/yellow"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/gender_tag"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_middle"
        app:layout_constraintTop_toTopOf="@id/gender_tag"
        tools:text="Male" />

    <TextView
        android:id="@+id/height_tag"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/star_wars_font"
        android:letterSpacing="0.1"
        android:text="@string/height_tag"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/gender_tag" />

    <TextView
        android:id="@+id/character_height"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/star_wars_font"
        android:letterSpacing="0.1"
        android:textColor="@color/yellow"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/height_tag"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_middle"
        app:layout_constraintTop_toTopOf="@id/height_tag"
        tools:text="177" />

    <TextView
        android:id="@+id/starships_tag"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/star_wars_font"
        android:letterSpacing="0.1"
        android:text="@string/starships_tag"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/height_tag" />

    <TextView
        android:id="@+id/character_starships"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/star_wars_font"
        android:letterSpacing="0.1"
        android:textColor="@color/yellow"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_middle"
        app:layout_constraintTop_toTopOf="@id/starships_tag"
        tools:text="Luke Skywalker, Luke Skywalker, Luke Skywalker" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/AppTheme.Progressbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/character_starships" />

    <LinearLayout
        android:id="@+id/error_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/character_starships">

        <TextView
            android:id="@+id/error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            tools:text="Timeout" />

        <Button
            android:id="@+id/retry_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:backgroundTint="@color/yellow"
            android:text="@string/button_retry"
            android:textAllCaps="false"
            android:textColor="@color/black" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.30" />

</androidx.constraintlayout.widget.ConstraintLayout>